# khipu

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .importlinter  diag.txt  pyproject.toml
backend/app/: config.py  container.py  main.py  seed.py  sources.py
backend/app/adapters/inbound/mcp/: server.py
backend/app/adapters/outbound/: audit_inmemory.py  audit_pg.py  conversation_inmemory.py  conversation_pg.py  db.py  history_inmemory.py  history_pg.py  memory_inmemory.py  memory_qdrant.py  org.py  promotion_inmemory.py  promotion_pg.py
backend/app/ai/: config.py  registry.py  types.py
backend/app/ai/prompts/: answer.py  answer_stream.py  conflict.py  extraction.py  judge.py  rerank.py  router.py
backend/app/ai/providers/: base.py  reranker.py  rest_provider.py
backend/app/api/: routes.py  schemas.py
backend/app/application/: governance_service.py  jobs.py  memory_service.py  redteam.py  retrieval.py
backend/app/domain/: decay.py  enums.py  models.py  policies.py  ports.py  resolution.py
backend/app/guards/: injection.py  isolation.py  pii.py
backend/tests/: test_core.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  store.ts
frontend/src/components/: ChatList.tsx  Header.tsx  Inspector.tsx  KhipuListView.tsx  KhipuView.tsx  Logo.tsx  Nav.tsx  OrgTree.tsx  Sidebar.tsx
frontend/src/khipu/: scene.ts
frontend/src/lib/: api.ts  types.ts  useGovReview.ts
infra/: docker-compose.yml
scripts/: reset_demo.py
(+8 files in other folders)
