[project]
name = "khipu"
version = "0.1.0"
description = "Khipu — trustworthy institutional memory layer for AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "qdrant-client>=1.12",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "tenacity>=9.0",
    "structlog>=24.4",
    "apscheduler>=3.11",
    "rank-bm25>=0.2.2",
    "mcp>=1.28,<2.0",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.3"]  # optional local embedder/reranker for offline dev
dev = ["pytest>=8.3", "import-linter>=2.1", "ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
